Add recipe page content for Char Kway Teow

--- a/recipes/char-kuay-teow.html
+++ b/recipes/char-kuay-teow.html
@@ -7,5 +7,49 @@
     <body>
         <h1>Char Kuay Teow</h1>
 
+        <img src="../images/char_kway_teow.jpg" width="400" alt="Char kway teow at a hawker centre in Singapore">
+
+        <h2>Description</h2>
+        <p> Char kway teow (Chinese: 炒粿條) is a stir-fried rice noodle dish from Maritime Southeast Asia of southern Chinese origin.
+            In Hokkien and Teochew, char means 'stir-fried' and kway teow refers to flat rice noodles. </p>
+
+        <p> It is made from flat rice noodles (Chinese: 河粉) or kway teow (Chinese: 粿條) of approximately 1 cm or about 0.5 cm in width, 
+            stir-fried over very high heat with garlic, light and dark soy sauce, chili paste, whole prawns, shelled blood cockles, 
+            chopped Chinese chives, slices of Chinese sausage, and bean sprouts.</p>
+
+        <p> An epic noodle dish from the streets of Singapore and Malaysia &mdash; 
+            big flavours, contrasting textures and the signature hint of charred smokiness, this is bold Southeast Asian food at its best! </p>
+        
+        <h3>Ingedients</h3>
+        <ul>
+            <li>500 g / 1 lb fresh wide rice noodle</li>
+            <li>2 tbsp lard</li>
+            <li>2 tbsp vegetable oil</li>
+            <li>10 small prawns/shrimp</li>
+            <li>2 garlic cloves</li>
+            <li>1 Chinese sausage / Lup Chong Sausage</li>
+            <li>5 cm / 2″ piece of fried fish cake</li>
+            <li>20 stems garlic chives</li>
+            <li>2 1/2 cups bean sprouts</li>
+            <li>2 eggs</li>
+            <li>5 tsp dark soy sauce</li>
+            <li>4 tsp light soy</li>
+            <li>2 tsp oyster sauce</li>
+            <li>4 tsp kecap manis / sweet soy sauce</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat 1 tbsp oil in a large non stick skillet over high heat.</li>
+            <li>When heated, add shrimp and cook for 1 1/2 minutes until just cooked through, then remove into bowl</li>
+            <li>Add Chinese sausage and fish cake, and cook for 1 minute until sausage is caramelised, then add to bowl.</li>
+            <li>Add 1 tbsp oil then add egg and cook, pushing in the edges to make a thick omelette. Once set, chop it up roughly using a wooden spoon, then add to bowl.</li>
+            <li>Add bean sprouts and cook for about 1 minute until just starting to wilt, then add to bowl.</li>
+            <li>Add lard. Once melted and starting to smoke, add garlic then immediately add noodles. Fold gently 4 times using a spatula + wooden spoon just to disperse oil through noodles.</li>
+            <li>Tip all the other ingredients back in plus the chives. Fold gently twice, then pour all the Sauce over.</li>
+            <li>Gently toss 4 to 6 times to disperse the sauce, pausing in between to allow the noodles to have a chance to caramelise on the edges a bit.</li>
+            <li>Remove from stove and serve immediately.</li>
+        </ol>
+
         <a href="../index.html">Home</a>
 </html>
