--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
         <title>Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h2>
+        <h1>Odin Recipes</h1>
+
+        <a href="recipes/char-kuay-teow.html">Char Kuay Teow</a>
 </html>
