--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="recipes/char-kuay-teow.html">Char Kuay Teow</a>
+        <ul>
+            <li><a href="recipes/char-kuay-teow.html">Char Kuay Teow</a></li>
+            <li><a href="recipes/okonomiyaki.html">Okonomiyaki</a></li>
+        </ul>
 </html>
