Add recipe page content for Spaghetti Bolognese

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <ul>
             <li><a href="recipes/char-kuay-teow.html">Char Kuay Teow</a></li>
             <li><a href="recipes/okonomiyaki.html">Okonomiyaki</a></li>
+            <li><a href="recipes/spaghetti-bolognese.html">Spaghetti Bolognese</a></li>
         </ul>
 </html>
