Add CSS stylesheet

--- a/recipes/char-kuay-teow.html
+++ b/recipes/char-kuay-teow.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Char Kuay Teow</title>
+        <link rel="stylesheet" href="../styles/style.css">
     </head>
     <body>
         <h1>Char Kuay Teow</h1>
