--- a/recipes/okonomiyaki.html
+++ b/recipes/okonomiyaki.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Okonomiyaki</title>
+        <link rel="stylesheet" href="../styles/style.css">
     </head>
     <body>
         <h1>Okonomiyaki</h1>
