--- a/recipes/spaghetti-bolognese.html
+++ b/recipes/spaghetti-bolognese.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Spaghetti Bolognese</title>
+        <link rel="stylesheet" href="../styles/style.css">
     </head>
     <body>
         <h1>Spaghetti Bolognese</h1>
