Add styles to homepage and recipe pages

--- a/recipes/char-kuay-teow.html
+++ b/recipes/char-kuay-teow.html
@@ -8,10 +8,12 @@
     <body>
         <h1>Char Kuay Teow</h1>
 
-        <img src="../images/char_kway_teow.jpg" width="400" alt="Char kway teow at a hawker centre in Singapore">
+        <div>
+          <img src="../images/char_kway_teow.jpg" width="400" alt="Char kway teow at a hawker centre in Singapore">
+        </div>
 
         <h2>Description</h2>
-        <p> <em>Char kway teow</em> (Chinese: 炒粿條) is a stir-fried rice noodle dish from Maritime Southeast Asia of southern Chinese origin.
+        <p> <span class="red-text"><em>Char kway teow</em> (Chinese: 炒粿條)</span> is a stir-fried rice noodle dish from Maritime Southeast Asia of southern Chinese origin.
             In Hokkien and Teochew, char means 'stir-fried' and kway teow refers to flat rice noodles. </p>
 
         <p> It is made from flat rice noodles (Chinese: 河粉) or kway teow (Chinese: 粿條) of approximately 1 cm or about 0.5 cm in width, 
@@ -52,5 +54,5 @@
             <li>Remove from stove and serve immediately.</li>
         </ol>
 
-        <a href="../index.html">Home</a>
+        <button><a href="../index.html">Home</a></button>
 </html>
