--- a/recipes/spaghetti-bolognese.html
+++ b/recipes/spaghetti-bolognese.html
@@ -8,11 +8,13 @@
     <body>
         <h1>Spaghetti Bolognese</h1>
 
-        <img src="../images/spaghetti-bolognese.jpg" width="400" alt="Healthy plate of spaghetti bolognese">
-        <p>Source: http://upload.wikimedia.org/wikipedia/commons/3/39/Healthy_Spaghetti_bolognese_-_49859910622.jpg</p>
+        <div>
+            <img src="../images/spaghetti-bolognese.jpg" width="400" alt="Healthy plate of spaghetti bolognese">
+            <p class="small-text">Source: http://upload.wikimedia.org/wikipedia/commons/3/39/Healthy_Spaghetti_bolognese_-_49859910622.jpg</p>
+        </div>
 
         <h2>Description</h2>
-        <p> <b>Spaghetti bolognese</b>, often shortened to "spag bol" in the UK and Australia, 
+        <p> <span class="red-text"><em>Spaghetti bolognese</em></span>, often shortened to "spag bol" in the UK and Australia, 
             is a popular pasta dish outside Italy consisting of spaghetti and bolognese sauce.  </p>
 
         <p> Bolognese sauce (Italian: Ragù alla bolognese) is a slowly cooked meat-based sauce, and its preparation 
@@ -45,5 +47,5 @@
             <li>When ready to cook the spaghetti, heat a large saucepan of water and add a pinch of salt. Cook according to the packet instructions. Once the spaghetti is cooked through, drain and add to the pan with the bolognese sauce. Mix well and serve.</li>
         </ol>
 
-        <a href="../index.html">Home</a>
+        <button><a href="../index.html">Home</a></button>
 </html>
