--- a/recipes/okonomiyaki.html
+++ b/recipes/okonomiyaki.html
@@ -8,11 +8,13 @@
     <body>
         <h1>Okonomiyaki</h1>
 
-        <img src="../images/okonomiyaki.jpg" width="400" alt="Okonomiyaaki, a Japanese savory pancake dish">
-        <p>Source: https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Okonomiyaki_001.jpg/800px-Okonomiyaki_001.jpg</p>
+        <div>
+            <img src="../images/okonomiyaki.jpg" width="400" alt="Okonomiyaaki, a Japanese savory pancake dish">
+            <p class="small-text">Source: https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Okonomiyaki_001.jpg/800px-Okonomiyaki_001.jpg</p>
+        </div>
 
         <h2>Description</h2>
-        <p> <em>Okonomiyaki</em> (Japanese: お好み焼き) is a Japanese teppanyaki savory pancake dish consisting of 
+        <p> <span class="red-text"><em>Okonomiyaki</em> (Japanese: お好み焼き)</span> is a Japanese teppanyaki savory pancake dish consisting of 
             wheat flour batter and other ingredients (mixed, or as toppings) cooked on a teppan (flat griddle). </p>
 
         <p> Common additions include cabbage, meat, and seafood, and toppings include 
@@ -45,5 +47,5 @@
             <li>Transfer the hot okonomiyaki to a plate and brush the surface with okonomiyaki sauce. Drizzle with Japanese mayonnaise, then sprinkle aonori (dried seaweed) and katsuobushi (bonito flakes) on top. The bonito flakes will “dance” with the heat &mdash; one of the joys of serving this dish. Enjoy!</li>
         </ol>
 
-        <a href="../index.html">Home</a>
+        <button><a href="../index.html">Home</a></button>
 </html>
